[package]
name = "silk-sys"
version = "0.1.0"
description = "silk sys"
authors = ["yaozhihui<zhihui.yao@aispeech.com>"]
edition = "2021"

license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.libc]
version = "0.2.142"

[dependencies.bytes]
version = "1.4.0"

[dependencies.anyhow]
version = "1.0.70"

[build-dependencies.bindgen]
version = "0.65.1"

[build-dependencies.cc]
version = "1.0.79"

